[bug 1002849] Removes extra padding in Footer

--- a/kitsune/sumo/static/less/main.less
+++ b/kitsune/sumo/static/less/main.less
@@ -89,7 +89,7 @@ html {
 footer {
   background: #fff;
   margin: 100px 0 0 0;
-  padding: 45px 0 110px 0;
+  padding: 45px 0 10px 0;
   text-align: left;
 
   ul {
